--- a/BtcMarkets/BtcMarkets.Wallet/AppShell.xaml
+++ b/BtcMarkets/BtcMarkets.Wallet/AppShell.xaml
@@ -12,8 +12,8 @@
         xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
     ios:Page.UseSafeArea="true" 
        x:Class="BtcMarkets.Wallet.AppShell" Navigating="Shell_Navigating" Navigated="MainPageRef_Navigated"  
-       
-       Style="{StaticResource DefaultShell}">
+       FlyoutIcon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=menu}"
+       Style="{StaticResource DefaultShell}" FlyoutBackgroundColor="{DynamicResource DefaultBackgroundColor}" >
 
     <!--
         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
@@ -58,7 +58,7 @@
     -->
     <Shell.Resources>
         <ResourceDictionary>
-         
+
             <Style TargetType="ShellItem" BasedOn="{StaticResource BaseStyle}" />
         </ResourceDictionary>
     </Shell.Resources>
@@ -69,34 +69,40 @@
         <!--<ShellSection Title="Home" Icon="{Binding Converter={StaticResource FontIconImage}, ConverterParameter=home}" Route="Home"  >
             <ShellContent ContentTemplate="{DataTemplate local:HomePage}" />
         </ShellSection>-->
-        <ShellSection Title="Markets" Icon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=timeline}" Route="Markets">
-            
-            <ShellContent  ContentTemplate="{DataTemplate local:MarketsPage}" Title="Markets"  Route="List"  />
+        <ShellSection Title="Markets" Icon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=timeline}" Route="Markets" FlyoutIcon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=timeline}" FlyoutDisplayOptions="AsMultipleItems">
+
+            <ShellContent  ContentTemplate="{DataTemplate local:MarketsPage}" Title="Markets"  Route="List"  Icon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=timeline|AccentColor}" FlyoutIcon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=timeline|AccentColor}"/>
             <!--<ShellContent ContentTemplate="{DataTemplate local:BtcMarketsPage}" Title="BTC Markets" Route="Btc" />
             <ShellContent ContentTemplate="{DataTemplate local:FavMarketsPage}" Title="Favourites" Route="Fav" />-->
         </ShellSection>
 
-        <ShellSection Title="Trades"  Icon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=swap_vert}"  Route="Trades" >
-            <ShellContent ContentTemplate="{DataTemplate local:MarketTradesPage}" Title="Market Trades" Route="Trades" />
+        <ShellSection Title="Trades"  Icon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=swap_vert}"  Route="Trades" FlyoutIcon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=swap_vert}" FlyoutDisplayOptions="AsMultipleItems" >
+            <ShellContent ContentTemplate="{DataTemplate local:MarketTradesPage}" Title="Trades" Route="Trades" Icon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=swap_vert|AccentColor}" FlyoutIcon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=swap_vert|AccentColor}"/>
         </ShellSection>
 
-        <ShellSection Title="Account"  Icon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=account_box}"  Route="Account" IsEnabled="{Binding Source={x:Static lib:AppData.Current},Path=IsAccountValid}" >
-            <ShellContent ContentTemplate="{DataTemplate local:OpenOrdersPage}" Title="Open Orders" Route="OpenOrders"/>
-            <ShellContent ContentTemplate="{DataTemplate local:AccountBalancesPage}" Title="Balances" Route="AccountBalances"/>
-            <ShellContent ContentTemplate="{DataTemplate local:OrdersHistoryPage}" Title="Orders History" Route="OrdersHistory"/>
-            
+        <ShellSection Title="Account"  Icon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=account_box}"  Route="Account" FlyoutIcon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=account_box}" FlyoutDisplayOptions="AsMultipleItems" >
+
+            <ShellContent ContentTemplate="{DataTemplate local:AccountBalancesPage}" Title="Balances" Route="AccountBalances" Icon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=account_balance_wallet|AccentColor}" FlyoutIcon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=account_balance_wallet|AccentColor}"/>
+            <ShellContent ContentTemplate="{DataTemplate local:OpenOrdersPage}" Title="Open Orders" Route="OpenOrders"  Icon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=format_list_numbered|AccentColor}" FlyoutIcon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=account_balance_wallet|AccentColor}" />
+
+            <ShellContent ContentTemplate="{DataTemplate local:OrdersHistoryPage}" Title="Orders History" Route="OrdersHistory" Icon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=format_list_bulleted|AccentColor}" FlyoutIcon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=format_list_bulleted|AccentColor}"  />
         </ShellSection>
-        
-        <ShellSection Title="Settings" Icon="{Binding Converter={StaticResource FontIconImage}, ConverterParameter=settings}" Route="Settings" >
+
+        <ShellSection Title="Settings" Icon="{Binding Converter={StaticResource FontIconImage}, ConverterParameter=settings}" Route="Settings" FlyoutIcon="{Binding Converter={StaticResource FontIconImage}, ConverterParameter=settings}" FlyoutDisplayOptions="AsMultipleItems">
             <!--<ShellContent ContentTemplate="{DataTemplate local:ApiKeysPage}" Title="Api Keys" Route="ApiKeys"/>-->
-            <ShellContent ContentTemplate="{DataTemplate local:SettingsPage}" Title="Settings" Route="Settings"/>
+            <ShellContent ContentTemplate="{DataTemplate local:SettingsPage}" Title="Settings" Route="Settings"  Icon="{Binding Converter={StaticResource FontIconImage}, ConverterParameter=settings|AccentColor}" FlyoutIcon="{Binding Converter={StaticResource FontIconImage}, ConverterParameter=settings|AccentColor}"/>
         </ShellSection>
 
 
-        <ShellSection Title="News" Icon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=view_list}" Route="News" >
-            <ShellContent ContentTemplate="{DataTemplate local:NewsPage}" />
+        <ShellSection Title="News" Icon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=view_list}" Route="News" FlyoutIcon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=view_list}" FlyoutDisplayOptions="AsMultipleItems">
+            <ShellContent Title="News" ContentTemplate="{DataTemplate local:NewsPage}" Icon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=view_list|AccentColor}" FlyoutIcon="{Binding Converter={StaticResource FontIconImage},ConverterParameter=view_list|AccentColor}"/>
         </ShellSection>
+
+
     </ShellItem>
+    <FlyoutItem>
+
+    </FlyoutItem>
 
     <!-- Optional Templates 
     // These may be provided inline as below or as separate classes.
@@ -105,19 +111,21 @@
    
 
     -->
+
     <Shell.FlyoutHeaderTemplate >
         <DataTemplate>
-            <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="{StaticResource PrimaryColor}" HeightRequest="100"><!--ContentHere-->
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <!--<Image x:Name="HeaderImage" Grid.Row="0" Grid.Column="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Source="{Binding BindingContext.Logo, Source={x:Reference MainPageRef}, Converter={StaticResource Base64ToImage}}"></Image>-->
-                <Label Grid.Row="0" Grid.Column="0" Text="{Binding Title}" FontAttributes="Bold" FontSize="Large" TextColor="White" HorizontalTextAlignment="Center" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" VerticalTextAlignment="Center"> </Label>
-                <StackLayout Grid.Row="1" Grid.Column="0">
-                    <local:AccountHoldingsView  HorizontalOptions="FillAndExpand"></local:AccountHoldingsView>
+
+            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" BackgroundColor="{StaticResource PrimaryColor}" HeightRequest="100" >
+
+                <StackLayout VerticalOptions="EndAndExpand">
+                    <!--<Image x:Name="HeaderImage" Grid.Row="0" Grid.Column="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Source="{Binding BindingContext.Logo, Source={x:Reference MainPageRef}, Converter={StaticResource Base64ToImage}}"></Image>-->
+                    <Label Grid.Row="0" Grid.Column="0" Text="{Binding Title}" FontAttributes="Bold" FontSize="Large" TextColor="White" HorizontalTextAlignment="Center" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" VerticalTextAlignment="Center"></Label>
+                    <StackLayout Grid.Row="1" Grid.Column="0">
+                        <local:AccountHoldingsView  HorizontalOptions="FillAndExpand"></local:AccountHoldingsView>
+                    </StackLayout>
                 </StackLayout>
-            </Grid>
+            </StackLayout>
+
         </DataTemplate>
     </Shell.FlyoutHeaderTemplate>
 
@@ -125,7 +133,17 @@
     <Shell.ItemTemplate>
         <DataTemplate>
             <ContentView>
-                <!-- Properties: Title, Icon-->
+                <Grid Padding="0,10,0,10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="0.15*" />
+                        <ColumnDefinition Width="0.85*" />
+                    </Grid.ColumnDefinitions>
+                    <Image Source="{Binding Icon}" 
+                       HeightRequest="30" />
+                    <Label Grid.Column="1"
+                       Text="{Binding Title}" Style="{StaticResource MediumDefaultText}"
+                       VerticalTextAlignment="Center" />
+                </Grid>
             </ContentView>
         </DataTemplate>
     </Shell.ItemTemplate>
@@ -141,4 +159,5 @@
             </ContentView>
         </DataTemplate>
     </Shell.MenuItemTemplate>
+
 </Shell>
