--- a/BtcMarkets/BtcMarkets.Wallet/Views/MarketTradesPage.xaml
+++ b/BtcMarkets/BtcMarkets.Wallet/Views/MarketTradesPage.xaml
@@ -5,6 +5,7 @@
              Style="{StaticResource DefaultPage}" 
               xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
              xmlns:views="clr-namespace:BtcMarkets.Wallet.Views"
+             xmlns:controls="clr-namespace:BtcMarkets.Wallet.Controls"
              ios:Page.UseSafeArea="true" 
              x:Name="TradeOrdersPage" 
              x:Class="BtcMarkets.Wallet.Views.MarketTradesPage">
@@ -68,8 +69,9 @@
                             <CollectionView.ItemTemplate>
                                 <DataTemplate>
 
-                                    <StackLayout Margin="5" HeightRequest="20" Orientation="Horizontal" HorizontalOptions="FillAndExpand"  >
-                                        <Image Source="{Binding Image,Converter={StaticResource Base64ToImage}}" WidthRequest="20" HeightRequest="20" />
+                                    <StackLayout Margin="5" Padding="2,0,2,0" HeightRequest="20" Orientation="Horizontal" HorizontalOptions="FillAndExpand"  >
+                                        <!--<Image Source="{Binding Image,Converter={StaticResource Base64ToImage}}" WidthRequest="20" HeightRequest="20" />-->
+                                        <Image Source="{Binding ImageSource}" WidthRequest="20" HeightRequest="20" />
                                         <Label  Text="{Binding Pair}" Style="{StaticResource SmallDefaultText}" VerticalOptions="CenterAndExpand">
                                         </Label>
                                     </StackLayout>
@@ -94,27 +96,84 @@
                             <ColumnDefinition Width="33*"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
 
-                        <StackLayout Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"  Orientation="Horizontal" HorizontalOptions="FillAndExpand" Spacing="25">
-                            <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" >
-                                <Image Source="{Binding TradeMarket.Image,Converter={StaticResource Base64ToImage}}" WidthRequest="20" HeightRequest="20" />
+                        <!--<Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"></RowDefinition>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="35*"></ColumnDefinition>
+                                <ColumnDefinition Width="40*"></ColumnDefinition>
+                                <ColumnDefinition Width="25*"></ColumnDefinition>
+                            </Grid.ColumnDefinitions>-->
+                        <StackLayout Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Orientation="Horizontal" Spacing="15" HorizontalOptions="FillAndExpand">
+                            <StackLayout Grid.Row="0" Grid.Column="0" Orientation="Horizontal" HorizontalOptions="FillAndExpand" >
+                                <!--<Image Source="{Binding TradeMarket.Image,Converter={StaticResource Base64ToImage}}" WidthRequest="20" HeightRequest="20"  VerticalOptions="StartAndExpand"/>-->
+                                <Image Source="{Binding TradeMarket.ImageSource}" WidthRequest="20" HeightRequest="20" VerticalOptions="StartAndExpand"/>
                                 <Label Text="{Binding TradeMarket.Pair}" Style="{StaticResource LargeDefaultText}" HorizontalOptions="FillAndExpand" />
                             </StackLayout>
-                            <Label Text="{Binding TradeMarket.LastPriceWithSymbol}" Style="{StaticResource LargeDefaultText}" HorizontalOptions="FillAndExpand" />
+                            <controls:MarketValue Grid.Row="0" Grid.Column="1" Value="{Binding TradeMarket.LastPriceString}" ValueStyle="{StaticResource LargeDefaultText}" Symbol="{Binding TradeMarket.CurrencySymbol}" SymbolStyle="{StaticResource LargeDefaultAccentText}"  />
+
+
+                            <Label Grid.Row="0" Grid.Column="2" VerticalOptions="CenterAndExpand">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span Text="24HR " Style="{StaticResource SmallDefaultAccentText}"/>
+                                        <Span Text="{Binding TradeMarket.DayChangeString}" Style="{StaticResource SmallDefaultText}"/>
+                                    </FormattedString>
+                                </Label.FormattedText>
+
+                            </Label>
                         </StackLayout>
+                        <!--</Grid>-->
+                        <!--<StackLayout   Orientation="Horizontal" HorizontalOptions="FillAndExpand" Spacing="10">
+                            
+                            
+                         
+                            -->
+                        <!--<Label  HorizontalOptions="FillAndExpand" >
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span Text="{Binding TradeMarket.CurrencySymbol}" Style="{StaticResource LargeDefaultAccentText}"/>
+                                        <Span Text="{Binding TradeMarket.LastPriceString}" Style="{StaticResource LargeDefaultText}"/>
+                                        
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>-->
+                        <!--
+                        
+                        </StackLayout>-->
 
 
 
                         <StackLayout Grid.Row="1" Grid.Column="0">
                             <Label Style="{StaticResource AccentFieldLabel}" Text="Bid" />
-                            <Label Style="{StaticResource SmallDefaultText}"  Text="{Binding TradeMarket.BidString}" />
+                            <controls:MarketValue Value="{Binding TradeMarket.BidString}" ValueStyle="{StaticResource SmallDefaultText}" Symbol="{Binding TradeMarket.CurrencySymbol}" SymbolStyle="{StaticResource SmallDefaultAccentText}"  />
+                            <!--<Label  >
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span Text="{Binding TradeMarket.CurrencySymbol}" Style="{StaticResource SmallDefaultAccentText}"/>
+                                        <Span Style="{StaticResource SmallDefaultText}"  Text="{Binding TradeMarket.BidString}"/>
+
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>-->
                         </StackLayout>
                         <StackLayout Grid.Row="1" Grid.Column="1">
                             <Label Style="{StaticResource AccentFieldLabel}" Text="Ask" />
-                            <Label Style="{StaticResource SmallDefaultText}"  Text="{Binding TradeMarket.AskString}" />
+                            <controls:MarketValue Value="{Binding TradeMarket.AskString}" ValueStyle="{StaticResource SmallDefaultText}" Symbol="{Binding TradeMarket.CurrencySymbol}" SymbolStyle="{StaticResource SmallDefaultAccentText}"  />
+                            <!--<Label >
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span Text="{Binding TradeMarket.CurrencySymbol}" Style="{StaticResource SmallDefaultAccentText}"/>
+                                        <Span Style="{StaticResource SmallDefaultText}"  Text="{Binding TradeMarket.AskString}"/>
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>-->
                         </StackLayout>
                         <StackLayout Grid.Row="1" Grid.Column="2">
                             <Label Style="{StaticResource AccentFieldLabel}" Text="Vol(24H)" />
-                            <Label Style="{StaticResource SmallDefaultText}"  Text="{Binding TradeMarket.VolumeString}" />
+                            <!--<Label Style="{StaticResource SmallDefaultText}"  Text="{Binding TradeMarket.VolumeString}" />-->
+                            <controls:MarketValue Value="{Binding TradeMarket.VolumeString}" ValueStyle="{StaticResource SmallDefaultText}"  />
                         </StackLayout>
                         <!--<StackLayout Grid.Row="2" Grid.Column="0">
                             <Label Style="{StaticResource AccentFieldLabel}" >
@@ -161,15 +220,16 @@
                         <StackLayout Style="{StaticResource TradesListPanel}" >
                             <Grid Style="{StaticResource TradeListHeader}"  >
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="35*"></ColumnDefinition>
-                                    <ColumnDefinition Width="65*"></ColumnDefinition>
-
+                                    <ColumnDefinition Width="33*"></ColumnDefinition>
+                                    <ColumnDefinition Width="33*"></ColumnDefinition>
+                                    <ColumnDefinition Width="33*"></ColumnDefinition>
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"></RowDefinition>
                                 </Grid.RowDefinitions>
                                 <Label Grid.Row="0" Grid.Column="0" Text="Price"  Style="{StaticResource SmallHeaderText}"></Label>
                                 <Label Grid.Row="0" Grid.Column="1" Text="Volume" Style="{StaticResource SmallHeaderText}"></Label>
+                                <Label Grid.Row="0" Grid.Column="2" Text="Total" Style="{StaticResource SmallHeaderText}"></Label>
                             </Grid>
                             <ListView Style="{StaticResource TradesList}"  ItemsSource="{Binding BuyOrders}" HeightRequest="100"  >
                                 <ListView.ItemTemplate>
@@ -177,15 +237,31 @@
                                         <ViewCell>
                                             <Grid Style="{StaticResource TradeListTemplate}">
                                                 <Grid.ColumnDefinitions>
-                                                    <ColumnDefinition Width="35*"></ColumnDefinition>
-                                                    <ColumnDefinition Width="65*"></ColumnDefinition>
+                                                    <ColumnDefinition Width="33*"></ColumnDefinition>
+                                                    <ColumnDefinition Width="33*"></ColumnDefinition>
+                                                    <ColumnDefinition Width="33*"></ColumnDefinition>
                                                 </Grid.ColumnDefinitions>
                                                 <Grid.RowDefinitions>
                                                     <RowDefinition Height="Auto"></RowDefinition>
                                                 </Grid.RowDefinitions>
 
-                                                <Label Grid.Row="0" Grid.Column="0" Text="{Binding PriceString}"  Style="{StaticResource SmallDefaultText}"></Label>
+                                                <Label Grid.Row="0" Grid.Column="0" >
+                                                    <Label.FormattedText>
+                                                        <FormattedString>
+                                                            <Span Text="{Binding CurrencySymbol}"  Style="{StaticResource SmallDefaultAccentText}"/>
+                                                            <Span Text="{Binding PriceString}"  Style="{StaticResource SmallDefaultText}"/>
+                                                        </FormattedString>
+                                                    </Label.FormattedText>
+                                                </Label>
                                                 <Label Grid.Row="0" Grid.Column="1" Text="{Binding VolumeString}" Style="{StaticResource SmallDefaultText}"></Label>
+                                                <Label Grid.Row="0" Grid.Column="2" >
+                                                    <Label.FormattedText>
+                                                        <FormattedString>
+                                                            <Span Text="{Binding CurrencySymbol}"  Style="{StaticResource SmallDefaultAccentText}"/>
+                                                            <Span Text="{Binding TotalString}"  Style="{StaticResource SmallDefaultText}"/>
+                                                        </FormattedString>
+                                                    </Label.FormattedText>
+                                                </Label>
                                             </Grid>
                                         </ViewCell>
                                     </DataTemplate>
@@ -208,16 +284,16 @@
                         <StackLayout Style="{StaticResource TradesListPanel}" >
                             <Grid Style="{StaticResource TradeListHeader}"   >
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="35*"></ColumnDefinition>
-                                    <ColumnDefinition Width="65*"></ColumnDefinition>
-                                    <!--<ColumnDefinition Width="33*"></ColumnDefinition>-->
+                                    <ColumnDefinition Width="33*"></ColumnDefinition>
+                                    <ColumnDefinition Width="33*"></ColumnDefinition>
+                                    <ColumnDefinition Width="33*"></ColumnDefinition>
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"></RowDefinition>
                                 </Grid.RowDefinitions>
                                 <Label Grid.Row="0" Grid.Column="0" Text="Price"  Style="{StaticResource SmallHeaderText}"></Label>
                                 <Label Grid.Row="0" Grid.Column="1" Text="Volume" Style="{StaticResource SmallHeaderText}"></Label>
-
+                                <Label Grid.Row="0" Grid.Column="2" Text="Total" Style="{StaticResource SmallHeaderText}"></Label>
                                 <!--<Label Grid.Row="0" Grid.Column="2" Text="Value" Style="{StaticResource SmallHeaderText}"></Label>-->
                             </Grid>
                             <ListView Style="{StaticResource TradesList}"  ItemsSource="{Binding SellOrders}" HeightRequest="100"  >
@@ -226,15 +302,32 @@
                                         <ViewCell>
                                             <Grid Style="{StaticResource TradeListTemplate}">
                                                 <Grid.ColumnDefinitions>
-                                                    <ColumnDefinition Width="35*"></ColumnDefinition>
-                                                    <ColumnDefinition Width="65*"></ColumnDefinition>
+                                                    <ColumnDefinition Width="33*"></ColumnDefinition>
+                                                    <ColumnDefinition Width="33*"></ColumnDefinition>
+                                                    <ColumnDefinition Width="33*"></ColumnDefinition>
                                                 </Grid.ColumnDefinitions>
                                                 <Grid.RowDefinitions>
                                                     <RowDefinition Height="Auto"></RowDefinition>
                                                 </Grid.RowDefinitions>
 
-                                                <Label Grid.Row="0" Grid.Column="0" Text="{Binding PriceString}"  Style="{StaticResource SmallDefaultText}"></Label>
+                                                <Label Grid.Row="0" Grid.Column="0" >
+                                                    <Label.FormattedText>
+                                                        <FormattedString>
+                                                            <Span Text="{Binding CurrencySymbol}"  Style="{StaticResource SmallDefaultAccentText}"/>
+                                                            <Span Text="{Binding PriceString}"  Style="{StaticResource SmallDefaultText}"/>
+                                                        </FormattedString>
+                                                    </Label.FormattedText>
+                                                </Label>
                                                 <Label Grid.Row="0" Grid.Column="1" Text="{Binding VolumeString}" Style="{StaticResource SmallDefaultText}"></Label>
+                                                <Label Grid.Row="0" Grid.Column="2" >
+                                                    <Label.FormattedText>
+                                                        <FormattedString>
+                                                            <Span Text="{Binding CurrencySymbol}"  Style="{StaticResource SmallDefaultAccentText}"/>
+                                                            <Span Text="{Binding TotalString}"  Style="{StaticResource SmallDefaultText}"/>
+                                                        </FormattedString>
+                                                    </Label.FormattedText>
+
+                                                </Label>
                                             </Grid>
                                         </ViewCell>
                                     </DataTemplate>
@@ -285,7 +378,14 @@
                                                 </Grid.RowDefinitions>
                                                 <Label  Grid.Row="0" Grid.Column="0" Text="{Binding CreatedDate}" Style="{StaticResource SmallDefaultText}"></Label>
                                                 <Label Grid.Row="0" Grid.Column="1" Text="{Binding VolumeString}" Style="{StaticResource SmallDefaultText}"></Label>
-                                                <Label Grid.Row="0" Grid.Column="2" Text="{Binding PriceString}" Style="{StaticResource SmallDefaultText}"></Label>
+                                                <Label Grid.Row="0" Grid.Column="2" >
+                                                    <Label.FormattedText>
+                                                        <FormattedString>
+                                                            <Span Text="{Binding CurrencySymbol}"  Style="{StaticResource SmallDefaultAccentText}"/>
+                                                            <Span Text="{Binding PriceString}"  Style="{StaticResource SmallDefaultText}"/>
+                                                        </FormattedString>
+                                                    </Label.FormattedText>
+                                                </Label>
                                             </Grid>
                                         </ViewCell>
                                     </DataTemplate>
