--- a/BtcMarkets/BtcMarkets.Wallet/Views/MarketsPage.xaml
+++ b/BtcMarkets/BtcMarkets.Wallet/Views/MarketsPage.xaml
@@ -11,7 +11,7 @@
              x:Name="MarketsListPage" 
              x:Class="BtcMarkets.Wallet.Views.MarketsPage">
     <Shell.TitleView>
-        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand"  Spacing="10">
+        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand"  Spacing="10" Padding="0,0,10,0">
             <views:AccountHoldingsView  HorizontalOptions="FillAndExpand"></views:AccountHoldingsView>
             <StackLayout  Orientation="Horizontal" HorizontalOptions="EndAndExpand">
                 <StackLayout>
@@ -26,7 +26,7 @@
         </StackLayout>
     </Shell.TitleView>
     <ContentPage.Content>
-        <Grid Style="{StaticResource DefaultGrid}" RowSpacing="0">
+        <Grid Style="{StaticResource DefaultGrid}" RowSpacing="0" >
             <!--<Grid.Margin>
                 <OnPlatform x:TypeArguments="Thickness">
                     <On Platform="iOS" Value="0,5,0,0" />
@@ -47,10 +47,10 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="35*" />
-                    <ColumnDefinition Width="30*" />
-                    <ColumnDefinition Width="30*" />
-                    <ColumnDefinition Width="10*" />
+                    <ColumnDefinition Width="0.35*" />
+                    <ColumnDefinition Width="0.30*" />
+                    <ColumnDefinition Width="0.30*" />
+                    <ColumnDefinition Width="0.05*" />
                 </Grid.ColumnDefinitions>
                 <Label Grid.Column="0" Grid.Row="0"  
                                Text="Coin" 
@@ -108,22 +108,23 @@
                         <DataTemplate>
                             <ViewCell>
 
-                                <controls:CustomGrid  Style="{StaticResource MarketListTemplate}" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Padding="5,5,5,0">
+                                <controls:CustomGrid  Style="{StaticResource MarketListTemplate}" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Padding="5,10,5,10">
 
                                     <controls:CustomGrid.RowDefinitions>
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="Auto" />
                                     </controls:CustomGrid.RowDefinitions>
                                     <controls:CustomGrid.ColumnDefinitions>
-                                        <ColumnDefinition Width="35*" />
-                                        <ColumnDefinition Width="30*" />
-                                        <ColumnDefinition Width="30*" />
-                                        <ColumnDefinition Width="10*" />
+                                        <ColumnDefinition Width="0.35*" />
+                                        <ColumnDefinition Width="0.30*" />
+                                        <ColumnDefinition Width="0.30*" />
+                                        <ColumnDefinition Width="0.05*" />
                                     </controls:CustomGrid.ColumnDefinitions>
 
-                                    <StackLayout Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Orientation="Horizontal" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" >
+                                    <StackLayout Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" >
                                         <controls:CustomGrid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" >
                                             <controls:CustomGrid.RowDefinitions>
+                                                <RowDefinition Height="Auto"></RowDefinition>
                                                 <RowDefinition Height="Auto"></RowDefinition>
                                             </controls:CustomGrid.RowDefinitions>
                                             <controls:CustomGrid.ColumnDefinitions>
@@ -132,7 +133,7 @@
                                             </controls:CustomGrid.ColumnDefinitions>
 
                                             <Frame Grid.Row="0" Grid.Column="0" Style="{StaticResource MarketListFrame}" HeightRequest="24">
-                                                <Image Source="{Binding Image,Converter={StaticResource Base64ToImage}}" WidthRequest="24" HeightRequest="24">
+                                                <Image Source="{Binding ImageSource}" WidthRequest="24" HeightRequest="24">
                                                     <Image.VerticalOptions>
                                                         <OnPlatform x:TypeArguments="LayoutOptions">
                                                             <On Platform="Android" Value="StartAndExpand"/>
@@ -140,6 +141,15 @@
                                                         </OnPlatform>
                                                     </Image.VerticalOptions>
                                                 </Image>
+
+                                                <!--<Image Source="{Binding Image,Converter={StaticResource Base64ToImage}}" WidthRequest="24" HeightRequest="24">
+                                                    <Image.VerticalOptions>
+                                                        <OnPlatform x:TypeArguments="LayoutOptions">
+                                                            <On Platform="Android" Value="StartAndExpand"/>
+                                                            <On Platform="iOS" Value="StartAndExpand"/>
+                                                        </OnPlatform>
+                                                    </Image.VerticalOptions>
+                                                </Image>-->
                                             </Frame>
                                             <StackLayout  Grid.Row="0" Grid.Column="1"  Spacing="0" Padding="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
                                                 <Label Text="{Binding Instrument}"  Style="{StaticResource MarketListInstrumentCode}" HorizontalOptions="FillAndExpand"/>
@@ -154,18 +164,31 @@
                                                 </Label>
 
                                             </StackLayout>
+                                            <StackLayout Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Padding="0">
+                                            <Label>
+                                                <Label.FormattedText>
+                                                    <FormattedString>
+                                                        <Span Text="24HR " Style="{StaticResource MicroDefaultAccentText}"/>
+                                                        <Span Text="{Binding DayChangeString}" Style="{StaticResource MicroDefaultText}"/>
+                                                    </FormattedString>
+                                                </Label.FormattedText>
+
+                                            </Label>
+                                            </StackLayout>
                                         </controls:CustomGrid>
+                                      
                                     </StackLayout>
 
                                     <StackLayout Grid.Column="1" Grid.Row="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-                                        <Label  VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                                        <!--<Label  VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
                                             <Label.FormattedText>
                                                 <FormattedString>
                                                     <Span Text="{Binding CurrencySymbol} " Style="{StaticResource MarketListPriceSymbol}"></Span>
                                                     <Span Text="{Binding LastPriceString}" Style="{StaticResource MarketListPriceValue}"></Span>
                                                 </FormattedString>
                                             </Label.FormattedText>
-                                        </Label>
+                                        </Label>-->
+                                        <controls:MarketValue Value="{Binding LastPriceString}" ValueStyle="{StaticResource MarketListPriceValue}" Symbol="{Binding CurrencySymbol}" SymbolStyle="{StaticResource MarketListPriceSymbol}"  />
                                     </StackLayout>
 
                                     <StackLayout Grid.Column="2" Grid.Row="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" >
@@ -196,42 +219,40 @@
                                         </Image>
 
                                     </controls:CustomGrid>
-                                    <StackLayout Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal" Spacing="5" HorizontalOptions="FillAndExpand"  VerticalOptions="StartAndExpand" HeightRequest="30" >
-                                        <controls:CustomGrid Grid.Column="3" Grid.Row="0"  Grid.RowSpan="2" >
+                                    <StackLayout Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal" Spacing="5" HorizontalOptions="FillAndExpand"  VerticalOptions="StartAndExpand" HeightRequest="40" >
+                                        <controls:CustomGrid HorizontalOptions="FillAndExpand"  >
                                             <controls:CustomGrid.RowDefinitions>
+                                                <RowDefinition Height="Auto"></RowDefinition>
                                                 <RowDefinition Height="Auto"></RowDefinition>
                                             </controls:CustomGrid.RowDefinitions>
                                             <controls:CustomGrid.ColumnDefinitions>
-                                                <ColumnDefinition Width="15*"></ColumnDefinition>
-                                                <ColumnDefinition Width="15*"></ColumnDefinition>
-                                                <ColumnDefinition Width="15*"></ColumnDefinition>
+                                                <ColumnDefinition Width="0.33*"></ColumnDefinition>
+                                                <ColumnDefinition Width="0.33*"></ColumnDefinition>
+                                                <ColumnDefinition Width="0.33*"></ColumnDefinition>
                                             </controls:CustomGrid.ColumnDefinitions>
-                                            <Label  Grid.Row="0" Grid.Column="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-                                                <Label.FormattedText>
-                                                    <FormattedString>
-                                                        <Span Text="V(24H) "  Style="{StaticResource MarketListVolumeLabel}"></Span>
-                                                        <Span Text="{Binding VolumeString}" Style="{StaticResource MarketListVolumeValue}"></Span>
-                                                    </FormattedString>
-                                                </Label.FormattedText>
+                                            
+                                            <Label  Grid.Row="0" Grid.Column="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
+                                                     Text="V(24H) "  Style="{StaticResource MarketListVolumeLabel}">
                                             </Label>
-                                            <Label   Grid.Row="0" Grid.Column="1"  VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-                                                <Label.FormattedText>
-                                                    <FormattedString>
-                                                        <Span Text="Bid "  Style="{StaticResource MarketListVolumeLabel}"></Span>
-                                                        <Span Text="{Binding BidString}" Style="{StaticResource MarketListVolumeValue}"></Span>
-                                                    </FormattedString>
-                                                </Label.FormattedText>
+                                            <Label   Grid.Row="0" Grid.Column="1"  VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
+                                                     Text="Bid "  Style="{StaticResource MarketListVolumeLabel}">
                                             </Label>
-                                            <Label    Grid.Row="0" Grid.Column="2" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-                                                <Label.FormattedText>
-                                                    <FormattedString>
-                                                        <Span Text="Ask "  Style="{StaticResource MarketListVolumeLabel}"></Span>
-                                                        <Span Text="{Binding AskString}" Style="{StaticResource MarketListVolumeValue}"></Span>
-                                                    </FormattedString>
-                                                </Label.FormattedText>
+                                            <Label    Grid.Row="0" Grid.Column="2" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
+                                                      Text="Ask "  Style="{StaticResource MarketListVolumeLabel}">
                                             </Label>
+                                            <!--<Label  Grid.Row="1" Grid.Column="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
+                                                     Text="{Binding VolumeString}" Style="{StaticResource MarketListVolumeValue}">
+                                            </Label>-->
+                                            <controls:MarketValue Grid.Row="1" Grid.Column="0"  Value="{Binding VolumeString}" ValueStyle="{StaticResource MarketListVolumeValue}"  />
+                                            <!--<Label   Grid.Row="1" Grid.Column="1"  VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
+                                                      Text="{Binding BidString}" Style="{StaticResource MarketListVolumeValue}">
+                                            </Label>-->
+                                            <controls:MarketValue Grid.Row="1" Grid.Column="1"  Value="{Binding BidString}" ValueStyle="{StaticResource MarketListVolumeValue}" Symbol="{Binding CurrencySymbol}" SymbolStyle="{StaticResource MarketListVolumeSymbol}"  />
+                                            <!--<Label    Grid.Row="1" Grid.Column="2" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
+                                                      Text="{Binding AskString}" Style="{StaticResource MarketListVolumeValue}">
+                                            </Label>-->
+                                            <controls:MarketValue Grid.Row="1" Grid.Column="2"  Value="{Binding AskString}" ValueStyle="{StaticResource MarketListVolumeValue}" Symbol="{Binding CurrencySymbol}" SymbolStyle="{StaticResource MarketListVolumeSymbol}"  />
                                         </controls:CustomGrid>
-
                                     </StackLayout>
                                 </controls:CustomGrid>
 
@@ -240,7 +261,9 @@
 
                     </ListView.ItemTemplate>
                 </ListView>
+                
             </StackLayout>
+            
         </Grid>
     </ContentPage.Content>
 </ContentPage>
