--- a/BtcMarkets/BtcMarkets.Wallet/Themes/DarkTheme.xaml
+++ b/BtcMarkets/BtcMarkets.Wallet/Themes/DarkTheme.xaml
@@ -26,11 +26,11 @@
     <Color x:Key="LightBlackColor2">#1E1E1E</Color>
     <Color x:Key="LightBlackColor3">#2D2D30</Color>
     <Color x:Key="TextColor1">#99A3A4</Color>
-
+    <Color x:Key="ErrorColor1">#BF360C</Color>
     
     <!--<Color x:Key="PageBackgroundColor">#566573</Color>-->
-    <Color x:Key="PageBackgroundColor">#1E1E1E</Color>
-    <Color x:Key="DefaultBackgroundColor">#1E1E1E</Color>
+    <Color x:Key="PageBackgroundColor">#263238</Color>
+    <Color x:Key="DefaultBackgroundColor">#263238</Color>
     <!--Color x:Key="PageBackgroundColor">#2D2D30</Color>
     <Color x:Key="DefaultBackgroundColor">#2D2D30</Color>-->
     <Color x:Key="PageTextColor">#99A3A4</Color>
