--- a/BtcMarkets/BtcMarkets.Wallet/Views/OpenOrdersPage.xaml
+++ b/BtcMarkets/BtcMarkets.Wallet/Views/OpenOrdersPage.xaml
@@ -96,7 +96,7 @@
                                         <Label  Text="{Binding VolumeString}" Style="{StaticResource MicroDefaultText}"></Label>
                                     </StackLayout>
                                     <Label Grid.Row="0" Grid.Column="2" Text="{Binding Status}" Style="{StaticResource SmallDefaultText}"></Label>
-                                    <Image Grid.Row="0" Grid.Column="3" WidthRequest="20" HeightRequest="20" Source="{Binding Converter={StaticResource FontIconImage},ConverterParameter=cancel}" HorizontalOptions="StartAndExpand" VerticalOptions="StartAndExpand">
+                                    <Image Grid.Row="0" Grid.Column="3" WidthRequest="20" HeightRequest="20" Source="{Binding Converter={StaticResource FontIconImage},ConverterParameter=cancel|ErrorColor1}" HorizontalOptions="StartAndExpand" VerticalOptions="StartAndExpand">
                                         <Image.GestureRecognizers>
                                             <!--<TapGestureRecognizer Command="{Binding BindingContext.RefreshCommand, Source={x:Reference MarketDetails}}"></TapGestureRecognizer>-->
                                         </Image.GestureRecognizers>
